# KanFlow

./: Cargo.toml  LICENSE  README.md
kanflow/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
kanflow/src/: main.rs
